# evo-circuit

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
data/parfiles/: default.params
data/plufiles/: add1c.plu  and2.plu  epar3.plu  epar4.plu  xor2.plu
include/evo-circuit/core/: BitSimulator.hpp  DirtyMask.hpp  Logger.hpp  LutFunctionSet.hpp  LutNode.hpp  Parameters.hpp  PhenotypeCache.hpp
include/evo-circuit/evolution/: BooleanEvolver.hpp  EvoCircuitFunctions.hpp
include/evo-circuit/fitness/: BooleanFitness.hpp
src/: main.cpp
src/core/: BitSimulator.cpp  DirtyMask.cpp  PhenotypeCache.cpp
src/evolution/: BooleanEvolver.cpp
test/: CMakeLists.txt  test_core.cpp  test_phase2.cpp
